--- a/src/globals.css
+++ b/src/globals.css
@@ -24,3 +24,6 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.k-grid tbody tr {
+  @apply border-b border-gray-200;
+}
